# kirin_npu_llm_converter

./: .gitignore  README.md  c4_demo.json  check_result.json  do_opt.py  gen_out.sh  onnx_utils.py  optimize-config.yaml  pyproject.toml  run.sh
app_conf/: context.json  executor.json
dopt_conf/: qwen2.5-0.5b.json  qwen2.5-1.5b.json  qwen3-0.6b.json
model_info_target/: qwen2.5-0.5b.yaml  qwen2.5-1.5b.yaml  qwen3-0.6b.yaml  qwen3-1.7b.yaml
npu_tuned_model/: __init__.py
npu_tuned_model/glm/: __init__.py  configuration_glm.py  export_model_wrapper.py  infer_edge.py  modeling_glm.py
npu_tuned_model/qwen2/: README.md  __init__.py  configuration_qwen2.py  export_model_wrapper.py  modeling_qwen2.py
npu_tuned_model/qwen3/: export_model_wrapper.py  modeling_qwen3.py
omc_sh/: qwen25_0.5b.sh  qwen25_1.5b.sh  qwen3_0.6b.sh  qwen3_1.7b.sh
src/: export_model_single_qwen2.py  export_model_single_qwen3.py  opt_main.py  qwen3.py  qwen_onnx_test.py  qwen_test.py  utils.py
test/: gen_txt.py  gen_txt_kv.py  gen_txt_onnx.py  gen_txt_pth.py  gen_txt_quanted.py
