[project]
name = "kirin-npu-llm-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "chainlit>=2.9.0",
    "nbformat>=5.10.4",
    "onnx==1.18.0",
    "pytest>=9.0.1",
    "tokenizers==0.21.4",
    "torch==2.4.0",
    "transformers==4.51.0",
    "numpy<2",
    "onnxruntime>=1.23.2",
    "onnxslim>=0.1.74",
    "optimum>=2.0.0",
    "datasets>=4.5.0",
    "accelerate==1.3.0",
    "onnxsim>=0.4.36",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"
